# singra-vox

./: .gitattributes  .gitignore  README.md  api_channels.json  backend_comprehensive_test.py  backend_encryption_test.py  backend_password_reset_test.py  backend_test.py  conftest.py  design_guidelines.json  dump_channels.py  focused_test.py  frontend_diff.txt  install.sh  phase35_backend_test.py  test_api.py  tmp_channels.json
.cargo/: config.toml
.emergent/: emergent.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env  .env.example  generate_vapid.py  identity_server.py  requirements.txt  routes_phase2.py  routes_phase2.py.bak  routes_phase3.py  server.py
backend/app/: __init__.py  auth_service.py  blob_storage.py  dependencies.py  email_templates.py  emailing.py  main.py  pagination.py  permissions.py  rate_limits.py  schemas.py  voice_access.py  ws.py  ws_routes.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  encryption.py  utils.py
backend/app/identity/: __init__.py  config.py  models.py  oauth2.py  password.py  routes.py  totp.py
backend/app/routes/: __init__.py  auth.py  bots.py  channels.py  dm.py  e2ee.py  emojis.py  files.py  friends.py  (+24 more)
backend/scripts/: seed_local_test_stack.py
backend/tests/: test_2fa.py  test_e2ee.py  test_email_templates.py  test_friends_groups.py  test_frontend_flows.py  test_gdpr.py  test_iteration10_smtp_minio.py  test_permissions.py  test_permissions_full.py  test_refactor_iteration9.py  test_rich_presence_threads.py  test_role_hoisting.py  test_voice.py  test_voice_join_leave.py
deploy/: Caddyfile  backend.Dockerfile  docker-compose.localtest.yml  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  livekit.yaml  start-local-test-stack.ps1  turnserver.conf
deploy/nginx/: default.conf  production.template.conf  proxy.conf
desktop/: README.md  package-lock.json  package.json  run-tauri-dev.sh  start-tauri-bg.sh
desktop/scripts/: run-tauri.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  native_audio_capture.rs  native_capture.rs  native_livekit.rs  rich_presence.rs  voice_overlay.rs
desktop/src-tauri/src/screen_share/: commands.rs  mod.rs  publisher.rs  session.rs
desktop/src-tauri/src/screen_share/audio/: linux.rs  macos.rs  mod.rs  windows.rs
desktop/src-tauri/src/screen_share/capture/: linux.rs  macos.rs  mod.rs  windows.rs
desktop/src-tauri/windows/branding/: generate-installer-assets.ps1
docs/: ARCHITECTURE.md  RELEASING.md  architecture.md  contributing.md  deploy-identity-server.md  deployment-linux.md  docker-setup.md  encryption.md  frontend-design-system.md  konzept-singra-id.md  mls-group-e2ee.md  self-hosting.md  singra-vox-id.md  tauri-guide.md  troubleshooting.md  voice-streaming.md
docs/cleanup/: 2026-04-03-cleanup-changelog.md
docs/design/: desktop-native-system-audio-capture.md  health-check-timeout-hardening.md  mls-ratchet-migration-from-e2ee-v1.md  redis-realtimebus-migration.md
frontend/: .dockerignore  .env  .env.example  README.md  craco.config.js  nginx.default.conf  package-lock.json  package.json
frontend/desktop/: README.md
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/src/: main.rs
frontend/public/: index.html  manifest.json  service-worker.js
frontend/src/: App.css  App.js  index.css  index.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
memory/: PRD.md
schema/: permissions.json
template/: index.html
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json
tests/: __init__.py  backend_comprehensive_test.py  backend_encryption_test.py  backend_password_reset_test.py  backend_test.py  e2ee_acceptance.py  e2ee_crypto_helper.mjs  focused_test.py  history_visibility_smoke.py  realtime_ws_smoke.py  server_role_chat_smoke.py  test_app_composition.py  test_auth_service.py  test_channel_permissions.py  test_livekit_tokens.py  test_permission_centralization.py  test_permissions.py  test_svid_linking.py  test_twofa_rate_limit.py  test_voice_access.py  test_ws_manager.py
(+460 files in other folders)
