[package]
name = "singravox-desktop"
version = "0.1.0"
edition = "2021"
description = "Singra Vox Desktop Client"

[dependencies]
tauri = { version = "2", features = [] }
keyring = "3"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
crabgrab = { version = "0.4.0", features = ["bitmap"] }

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "singravox-desktop"
path = "src/main.rs"
