[package]
name = "singravox-desktop"
version = "0.3.3"
edition = "2021"
description = "Singra Vox Desktop Client"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = "3"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

# Screen/audio capture – only on platforms that support it
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
crabgrab = { version = "0.4.0", features = ["bitmap"] }

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "singravox-desktop"
path = "src/main.rs"
