[package]
name = "singravox-desktop"
version = "0.2.0"
edition = "2021"
description = "Singra Vox Desktop Client"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = "3"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

# Screen/audio capture – only on platforms that support it
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
base64 = "0.22"
crabgrab = { version = "0.4.0", features = ["bitmap"] }
# LiveKit Cloud performs an HTTPS region preflight before the WSS connection.
# The desktop client therefore needs an explicit TLS backend at build time.
# Keep LiveKit as the single WebRTC entrypoint so the crate graph resolves the
# coordinated libwebrtc/webrtc-sys workspace versions shipped by rust-sdks
# itself. We pin an exact upstream revision instead of maintaining a local
# webrtc-sys patch layer in this repository.
livekit = { git = "https://github.com/livekit/rust-sdks.git", rev = "2720d9000dba28f2741f2702ee759b74b266f118", package = "livekit", features = ["rustls-tls-native-roots"] }

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5.3"
windows = { version = "0.61", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "singravox-desktop"
path = "src/main.rs"

[profile.test]
# The native desktop test binary links the full static LiveKit/WebRTC stack on
# Windows. Keeping test debuginfo compact avoids PDB/linker limits without
# changing release artifacts.
debug = 1
