[package]
name = "singravox-desktop"
version = "0.1.0"
edition = "2021"
description = "Singra Vox Desktop Client"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "singravox-desktop"
path = "src/main.rs"
